# pypy_ffi_playground

./: Cargo.toml  build.rs
src/: ffi.rs  main.rs
